# AugmentedGraphics

./: README.md  keypoints and descriptors.odt
FindMultiContoursObject/: FindMultiContoursObject.sln
FindMultiContoursObject/FindMultiContoursObject/: FindMultiContoursObject.vcxproj  MultiContoursObject.cpp  MultiContoursObject.h  Thumbs.db  main.cpp
MatchShape/: MatchShape.sln
MatchShape/MatchShape/: MatchShape.vcxproj  MatchShape.vcxproj.filters  Star.cpp  Star.h  main.cpp
ObjectDetector/: ObjectDetector.sln
ObjectDetector/ObjectDetector/: CategoryTester.cpp  CategoryTester.h  CategoryTesterFactory.cpp  CategoryTesterFactory.h  InterCategoryTester.cpp  InterCategoryTester.h  Inter_Intra_Test.ods  Inter_Intra_Test.xlsx  IntraCategoryTester.cpp  IntraCategoryTester.h  MonoContourObjectDetector.cpp  MonoContourObjectDetector.h  MultiContourObjectDetector.cpp  MultiContourObjectDetector.h  ObjectDetector.h  ObjectDetector.vcxproj  ObjectDetector.vcxproj.filters  ObjectDetectorFactory.cpp  ObjectDetectorUML.vsd  Objectdetector.cpp  ObjectdetectorFactory.h  Utility.cpp  Utility.h  (+2 more)
ObjectDetectorThread/: AssemblyDependencies1.dgml  ObjectDetector.sln
ObjectDetector_Code/: CMakeCache.txt  CMakeLists.txt  MonoContourObjectDetector.cpp  MonoContourObjectDetector.h  MultiContourObjectDetector.cpp  ObjectDetector.h  Objectdetector.cpp  ObjectdetectorFactory.h  Utility.h  main.cpp
PaintDetector/: PaintDetector.sln
TestGoogleTest/: TestGoogleTest.sln
findGenericObject/: findGenericObject.sln
findGenericObject_Code/: GenericObject.cpp  GenericObject.h  Utility.h
(+233 files in other folders)
